# diffbot

./: CMakeLists.txt  package.xml
config/: diffbot.ros2_control.xacro  diffbot.urdf.xacro  diffbot_controllers.yaml  diffbot_description.urdf.xacro  initial_positions.yaml
hardware/: diffbot_hardware.cpp  hw.cpp
hardware/include/: comms.h  diffbot_hardware.hpp
ino/: meetup2025.ino
launch/: diffbot.launch.py
